Fixed spriteslove url

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ SOFTWARE.
                                 <div class="col">
 
                                     <!--Sprites Love icon-->
-                                    <a aria-label="Link to Sprites Love's website." href="https://spriteslove.com" target="_blank" id="spriteslovelink">
+                                    <a aria-label="Link to Sprites Love's website." href="https://spriteslove.abendiix.com" target="_blank" id="spriteslovelink">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Sprites Love's website."
                                         src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(40px, 25%);" id="spriteslovelinkicon" class="changeableColor">
                                     </a>
