Fonts added, translation for Trom and Fonts also added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ SOFTWARE.
                         <div class="col" style="border-radius: 10px; padding: 10%;">
                             
                             <!--Trom icon-->
-                            <img alt="Logo for the project Trom. It shows the trumpet's pixel art design from the game."
+                            <img alt="Logo for the project Trom. It shows a trumpet made with pixel art that comes from the game."
                             src="assets/img/logos/trom.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;" id="tromicon">
                             <!--Trom icon-->
 
@@ -156,12 +156,12 @@ SOFTWARE.
                             <div class="row text-center">
                                 <div class="col">
 
-                                    <!--Trom icon-->
+                                    <!--Trom's link icon-->
                                     <a aria-label="Link to Trom's Play Store page." href="https://play.google.com/store/apps/details?id=com.abendiix.trom" target="_blank" id="tromlinkplaystore">
                                         <img alt="Play Store icon in black (clear mode) that redirects to Trom's Play Store page."
                                         src="assets/img/icons/google-play.svg" style="margin: 0%; margin-top: 10%; width: min(32px, 25%);" id="tromlinkplaystoreicon" class="changeableColor">
                                     </a>
-                                    <!--Trom icon-->
+                                    <!--Trom's link icon-->
 
                                 </div>
                             </div>
@@ -171,6 +171,40 @@ SOFTWARE.
                     </div>
                 </div>
                 <!--Trom box-->
+
+                <!--Fonts box-->
+                <div class="projectBox" id="fonts" style="padding: 25px;">
+                    <div class="row swing animated" style="border-radius: 10px; margin-top: -15px; margin-bottom: -15px; border-style: solid;">
+                        <div class="col" style="border-radius: 10px; padding: 10%;">
+                            
+                            <!--Fonts icon-->
+                            <img alt="Logo for Abendiix's fonts. It shows a upper case A and a lower case a in pixel art style."
+                            src="assets/img/logos/fonts.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;" id="fontsicon">
+                            <!--Fonts icon-->
+
+                            <!--Fonts title-->
+                            <h4 style="margin: 0px;" id="fnts">Fonts</h4>
+                            <!--Fonts title-->
+
+                            <!--Fonts' links-->
+                            <div class="row text-center">
+                                <div class="col">
+
+                                    <!--Fonts icon-->
+                                    <a aria-label="Link to Abendiix's font website." href="https://fonts.abendiix.com" target="_blank" id="fontslink">
+                                        <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Abendiix's fonts website."
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(32px, 25%);" id="fontslinkicon" class="changeableColor">
+                                    </a>
+                                    <!--Fonts icon-->
+
+                                </div>
+                            </div>
+                            <!--Fonts links-->
+
+                        </div>
+                    </div>
+                </div>
+                <!--Fonts box-->
 
             </div>
         </div>
