Added Trom's privacy policy

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ SOFTWARE.
                                     <!--Fonts icon-->
                                     <a aria-label="Link to Abendiix's font website." href="https://fonts.abendiix.com" target="_blank" id="fontslink">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Abendiix's fonts website."
-                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(32px, 25%);" id="fontslinkicon" class="changeableColor">
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(40px, 25%);" id="fontslinkicon" class="changeableColor">
                                     </a>
                                     <!--Fonts icon-->
 
@@ -402,6 +402,20 @@ SOFTWARE.
 
         </div>
         <!--Presskits-->
+
+        <!--Privacy policies-->
+        <div class="container" style="margin-top: 4vh">
+            <h3 id="privacypolicies" style="font-size: 75%;">Privacy Policies</h3>
+            
+            <!--Trom's privacy policy-->
+            <details style="font-size: 75%;">
+                <summary>Trom</summary>
+                Trom does not generate any kind of data nor does it transmits it to any kind of server or data base.
+            </details>
+            <!--Trom's privacy policy-->
+
+        </div>
+        <!--Privacy policies-->
 
         <!--Section for external sites-->
         <div class="text-center" style="margin-top: max(2vw, 2vh); margin-bottom: 8px;">
