Added privacy policies' translations

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ SOFTWARE.
             <!--Trom's privacy policy-->
             <details style="font-size: 75%;">
                 <summary>Trom</summary>
-                Trom does not generate any kind of data nor does it transmits it to any kind of server or data base.
+                <p id="trompp">Trom does not generate any kind of data nor does it transmits it to any kind of server or data base.</p>
             </details>
             <!--Trom's privacy policy-->
 
