Added privacy policies' translations

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ SOFTWARE.
             
             <!--Trom's privacy policy-->
             <details style="font-size: 75%;">
-                <summary>Trom</summary>
+                <summary id="trompps">Trom</summary>
                 <p id="trompp">Trom does not generate any kind of data nor does it transmits it to any kind of server or data base.</p>
             </details>
             <!--Trom's privacy policy-->
