Added target=_blank to a elements and fixed visited links' color

--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@ SOFTWARE.
 
         <!--Copyright notice-->
         <div class="text-center" style="font-size: max(1vw, 2vh); margin-bottom: 404%;">
-            © 2019-2024 Abendiix - <a aria-label="Link to Creative Commons page about CC0." href="https://creativecommons.org/publicdomain/zero/1.0/" id="cc0" class="changeableColor">CC0 1.0</a>
+            © 2019-2024 Abendiix - <a aria-label="Link to Creative Commons page about CC0." href="https://creativecommons.org/publicdomain/zero/1.0/" id="cc0">CC0 1.0</a>
             <br>
-            © 2023 Fonticos, Inc (<a aria-label="Link to Font Awesome's page." href="https://fontawesome.com/" id="fontAwe" class="changeableColor">Font Awesome</a>) 
+            © 2023 Fonticos, Inc (<a aria-label="Link to Font Awesome's page." href="https://fontawesome.com/" id="fontAwe">Font Awesome</a>) 
         </div>
         <!--Copyright notice-->
 
