Updated with Trom cross-platform release and adding github repos

--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@ SOFTWARE.
                                 <div class="col">
 
                                     <!--Sprites Love's link icon-->
-                                    <a aria-label="Link to Sprites Love's website." href="https://spriteslove.abendiix.com" target="_blank" id="spriteslovelink">
+                                    <a aria-label="Link to Sprites Love's website." href="https://spriteslove.abendiix.com" target="_blank" id="spriteslovelink" style="width: 12%;">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Sprites Love's website."
-                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(40px, 25%);" id="spriteslovelinkicon" class="changeableColor">
-                                    </a>
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: inherit" id="spriteslovelinkicon" class="changeableColor"></a>
                                     <!--Sprites Love's link icon-->
+
+                                    <!--Sprites Love's github icon-->
+                                    <a aria-label="Link to Abendiix's Sprites Love's GitHub repository." href="https://github.com/Abendiix/spriteslove" target="_blank" id="spriteslovegithublink" style="width: 12%;">
+                                        <img alt="GitHub icon in black (clear mode) that redirects to Abendiix's Sprites Love's repository."
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="spriteslovegithublinkicon" class="changeableColor"></a>
+                                    <!--Sprites Love's github icon-->
 
                                 </div>
                             </div>
@@ -156,12 +161,35 @@ SOFTWARE.
                             <div class="row text-center">
                                 <div class="col">
 
-                                    <!--Trom's link icon-->
-                                    <a aria-label="Link to Trom's Play Store page." href="https://play.google.com/store/apps/details?id=com.abendiix.trom" target="_blank" id="tromlinkplaystore">
+                                    <!--Trom's itch.io link icon-->
+                                    <a aria-label="Link to Trom's itch.io page." href="https://abendiix.itch.io/trom" target="_blank" id="tromlinkitchio" style="width: 12%;">
+                                        <img alt="Itch.io icon in black (clear mode) that redirects to Trom's itch.io page."
+                                        src="assets/img/icons/itch-io.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkitchioicon" class="changeableColor"></a>
+                                    <!--Trom's itch.io link icon-->
+
+                                    <!--Trom's ko-fi link icon-->
+                                    <a aria-label="Link to Trom's Ko-fi page." href="https://ko-fi.com/s/d5c1cd9f0c" target="_blank" id="tromlinkko-fi" style="width: 12%;">
+                                        <img alt="Ko-fi icon in black (clear mode) that redirects to Trom's Ko-fi page."
+                                        src="assets/img/icons/ko-fi.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkko-fiicon" class="changeableColor"></a>
+                                    <!--Trom's ko-fi link icon-->
+
+                                    <!--Trom's github link icon-->
+                                    <a aria-label="Link to Trom's GitHub page." href="https://github.com/Abendiix/trom" target="_blank" id="tromlinkgithub" style="width: 12%">
+                                        <img alt="GitHub icon in black (clear mode) that redirects to Trom's GitHub page."
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkgithubicon" class="changeableColor"></a>
+                                    <!--Trom's github link icon-->
+
+                                    <!--Trom's play store link icon-->
+                                    <a aria-label="Link to Trom's Play Store page." href="https://play.google.com/store/apps/details?id=com.abendiix.trom" target="_blank" id="tromlinkplaystore" style="width: 12%; ">
                                         <img alt="Play Store icon in black (clear mode) that redirects to Trom's Play Store page."
-                                        src="assets/img/icons/google-play.svg" style="margin: 0%; margin-top: 10%; width: min(32px, 25%);" id="tromlinkplaystoreicon" class="changeableColor">
-                                    </a>
-                                    <!--Trom's link icon-->
+                                        src="assets/img/icons/google-play.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkplaystoreicon" class="changeableColor"></a>
+                                    <!--Trom's play store link icon-->
+
+                                    <!--Trom's app store link icon-->
+                                    <a aria-label="Link to Trom's App Store page." href="https://apps.apple.com/us/app/trom/id6496865166" target="_blank" id="tromlinkappstore" style="width: 12%;">
+                                        <img alt="App Store icon in black (clear mode) that redirects to Trom's App Store page."
+                                        src="assets/img/icons/app-store.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkappstoreicon" class="changeableColor"></a>
+                                    <!--Trom's app store link icon-->
 
                                 </div>
                             </div>
@@ -190,12 +218,17 @@ SOFTWARE.
                             <div class="row text-center">
                                 <div class="col">
 
-                                    <!--Fonts icon-->
-                                    <a aria-label="Link to Abendiix's font website." href="https://fonts.abendiix.com" target="_blank" id="fontslink">
+                                    <!--Fonts website icon-->
+                                    <a aria-label="Link to Abendiix's font website." href="https://fonts.abendiix.com" target="_blank" id="fontslink" style="width: 12%;">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Abendiix's fonts website."
-                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: min(40px, 25%);" id="fontslinkicon" class="changeableColor">
-                                    </a>
-                                    <!--Fonts icon-->
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="fontslinkicon" class="changeableColor"></a>
+                                    <!--Fonts website icon-->
+
+                                    <!--Fonts github icon-->
+                                    <a aria-label="Link to Abendiix's font's GitHub repository." href="https://github.com/Abendiix/fonts" target="_blank" id="fontsgithublink" style="width: 12%;">
+                                        <img alt="GitHub icon in black (clear mode) that redirects to Abendiix's font's repository."
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="fontsgithublinkicon" class="changeableColor"></a>
+                                    <!--Fonts github icon-->
 
                                 </div>
                             </div>
