--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ SOFTWARE.
                     <!--Banner-->
 
                     <!--Moto-->
-                    <h2 style="margin: 8px;" id="moto">Games, tools and more!</h2>
+                    <h2 style="margin: 2vh;" id="moto">Games, tools and more!</h2>
                     <!--Moto-->
                 </div>
             </div>
@@ -76,9 +76,9 @@ SOFTWARE.
                     </a>
 
                     <a aria-label="Change website colors to dark mode." role="button" onclick="changeToDarkMode()" id="darkmode">
-                        <img alt="Icon showing a moon for changing the website to dark mode." src="assets/img/icons/moon.svg" style="width: min(20px, 15%);" id="dark" class="changeableColor">
+                        <img alt="Icon showing a moon for changing the website to dark mode." src="assets/img/icons/moon.svg" style="width: min(20px, 10%);" id="dark" class="changeableColor">
                     </a>
-                    <p id="libretranslate" style="display: none; margin: 0px">翻訳： <a class="changeableColor" href="https://libretranslate.com/">LibreTranslate</a> | 間違いを通知するには、下記にお問い合わせください</p>
+                    <p id="libretranslate" style="font-size: 15px; display: none; margin: 0px">翻訳： <a class="changeableColor" href="https://libretranslate.com/">LibreTranslate</a> | 間違いを通知するには、下記にお問い合わせください</p>
                 </div>
             </div>
             <!--Available languages and modes' section-->
@@ -87,7 +87,7 @@ SOFTWARE.
         <!--Container for header, moto, languages and modes-->
 
         <!--Container for projects' filters-->
-        <div class="container">
+        <div class="container" style="margin-top: 2vh;">
             <h3 id="projectsh3" style="margin: .5rem;"> <p id="projects" style="display: inline;">Projects |</p>
                 <a aria-label="Show every Abendiix's project." role="button" onclick="showAll()" style="text-decoration: underline; margin-right: 10px;" id="projectsall">All</a>
 
@@ -102,7 +102,7 @@ SOFTWARE.
 
         <!--Projects' container-->
         <div class="container text-center">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" style="margin-top: 2vh;">
                 
                 <!--Sprites Love box-->
                 <div class="projectBox" id="spriteslove" style="padding: 25px;">
@@ -120,18 +120,18 @@ SOFTWARE.
 
                             <!--Sprites Love's links-->
                             <div class="row text-center">
-                                <div class="col">
+                                <div class="col" style="padding:0px;">
 
                                     <!--Sprites Love's link icon-->
                                     <a aria-label="Link to Sprites Love's website." href="https://spriteslove.abendiix.com" target="_blank" id="spriteslovelink" style="width: 12%;">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Sprites Love's website."
-                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: inherit" id="spriteslovelinkicon" class="changeableColor"></a>
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10px; width: 35px" id="spriteslovelinkicon" class="changeableColor"></a>
                                     <!--Sprites Love's link icon-->
 
                                     <!--Sprites Love's github icon-->
                                     <a aria-label="Link to Abendiix's Sprites Love's GitHub repository." href="https://github.com/Abendiix/spriteslove" target="_blank" id="spriteslovegithublink" style="width: 12%;">
                                         <img alt="GitHub icon in black (clear mode) that redirects to Abendiix's Sprites Love's repository."
-                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="spriteslovegithublinkicon" class="changeableColor"></a>
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="spriteslovegithublinkicon" class="changeableColor"></a>
                                     <!--Sprites Love's github icon-->
 
                                 </div>
@@ -164,31 +164,31 @@ SOFTWARE.
                                     <!--Trom's itch.io link icon-->
                                     <a aria-label="Link to Trom's itch.io page." href="https://abendiix.itch.io/trom" target="_blank" id="tromlinkitchio" style="width: 12%;">
                                         <img alt="Itch.io icon in black (clear mode) that redirects to Trom's itch.io page."
-                                        src="assets/img/icons/itch-io.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkitchioicon" class="changeableColor"></a>
+                                        src="assets/img/icons/itch-io.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="tromlinkitchioicon" class="changeableColor"></a>
                                     <!--Trom's itch.io link icon-->
 
                                     <!--Trom's ko-fi link icon-->
                                     <a aria-label="Link to Trom's Ko-fi page." href="https://ko-fi.com/s/d5c1cd9f0c" target="_blank" id="tromlinkko-fi" style="width: 12%;">
                                         <img alt="Ko-fi icon in black (clear mode) that redirects to Trom's Ko-fi page."
-                                        src="assets/img/icons/ko-fi.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkko-fiicon" class="changeableColor"></a>
+                                        src="assets/img/icons/ko-fi.svg" style="margin: 0%; margin-top: 10px; height: 25px;" id="tromlinkko-fiicon" class="changeableColor"></a>
                                     <!--Trom's ko-fi link icon-->
 
                                     <!--Trom's github link icon-->
                                     <a aria-label="Link to Trom's GitHub page." href="https://github.com/Abendiix/trom" target="_blank" id="tromlinkgithub" style="width: 12%">
                                         <img alt="GitHub icon in black (clear mode) that redirects to Trom's GitHub page."
-                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkgithubicon" class="changeableColor"></a>
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10px; height: 35px;" id="tromlinkgithubicon" class="changeableColor"></a>
                                     <!--Trom's github link icon-->
 
                                     <!--Trom's play store link icon-->
                                     <a aria-label="Link to Trom's Play Store page." href="https://play.google.com/store/apps/details?id=com.abendiix.trom" target="_blank" id="tromlinkplaystore" style="width: 12%; ">
                                         <img alt="Play Store icon in black (clear mode) that redirects to Trom's Play Store page."
-                                        src="assets/img/icons/google-play.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkplaystoreicon" class="changeableColor"></a>
+                                        src="assets/img/icons/google-play.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="tromlinkplaystoreicon" class="changeableColor"></a>
                                     <!--Trom's play store link icon-->
 
                                     <!--Trom's app store link icon-->
                                     <a aria-label="Link to Trom's App Store page." href="https://apps.apple.com/us/app/trom/id6496865166" target="_blank" id="tromlinkappstore" style="width: 12%;">
                                         <img alt="App Store icon in black (clear mode) that redirects to Trom's App Store page."
-                                        src="assets/img/icons/app-store.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="tromlinkappstoreicon" class="changeableColor"></a>
+                                        src="assets/img/icons/app-store.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="tromlinkappstoreicon" class="changeableColor"></a>
                                     <!--Trom's app store link icon-->
 
                                 </div>
@@ -221,13 +221,13 @@ SOFTWARE.
                                     <!--Fonts website icon-->
                                     <a aria-label="Link to Abendiix's font website." href="https://fonts.abendiix.com" target="_blank" id="fontslink" style="width: 12%;">
                                         <img alt="Black icon (in clear mode) that symbolizes a website link with two diagonal chains that redirects to Abendiix's fonts website."
-                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="fontslinkicon" class="changeableColor"></a>
+                                        src="assets/img/icons/link.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="fontslinkicon" class="changeableColor"></a>
                                     <!--Fonts website icon-->
 
                                     <!--Fonts github icon-->
                                     <a aria-label="Link to Abendiix's font's GitHub repository." href="https://github.com/Abendiix/fonts" target="_blank" id="fontsgithublink" style="width: 12%;">
                                         <img alt="GitHub icon in black (clear mode) that redirects to Abendiix's font's repository."
-                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10%; width: inherit;" id="fontsgithublinkicon" class="changeableColor"></a>
+                                        src="assets/img/icons/github.svg" style="margin: 0%; margin-top: 10px; width: 35px;" id="fontsgithublinkicon" class="changeableColor"></a>
                                     <!--Fonts github icon-->
 
                                 </div>
