New, fixed and improved japanese translation.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ SOFTWARE.
                     <a aria-label="Change website colors to dark mode." role="button" onclick="changeToDarkMode()" id="darkmode">
                         <img alt="Icon showing a moon for changing the website to dark mode." src="assets/img/icons/moon.svg" style="width: min(20px, 10%);" id="dark" class="changeableColor">
                     </a>
-                    <p id="libretranslate" style="font-size: 15px; display: none; margin: 0px">翻訳： <a class="changeableColor" href="https://libretranslate.com/">LibreTranslate</a> | 間違いを通知するには、下記にお問い合わせください</p>
+                    <p id="translationauthor" style="font-size: 15px; display: none; margin: 0px">翻訳： <a class="changeableColor" href="https://www.fiverr.com/qulitrans">Qulitrans Team</a></p>
                 </div>
             </div>
             <!--Available languages and modes' section-->
